# GovPress-MCP

./: .gitignore  .gitmodules  AGENTS.md  GeekNews-ShowGN-제출본문.md  Govpress-MCP-구현명세.md  LICENSE-data  Phase2-실행-절차서.md  README.md  docker-compose.yml  pyproject.toml  server-commands.sh  silent-overwrite-검증실험.md  데모-시나리오-스크립트.md  데이터-저장-아키텍처.md
codex-handoff/: 00-시작하기.md  AGENTS.md  README-for-codex.md  bulk_ingest.py  weekend-kickoff.md
docs/: api-vs-mcp.md  backfill-expansion-probe-instructions.md  backfill-expansion-probe.md  backfill-manifest-plan.md  backfill-manifest-report.md  derive-hot-benchmark.md  derive-hot-report.md  expanded-backfill-batch1-report.md  expanded-backfill-batch2-report.md  hwp-hwpx-conversion-report-2026-04-20.md  m3-final-stats.md  m4-hwp-report.md  m5-report.md  mcp-question-examples.md  mcp-test-examples.md  phase1-report.md  phase1-smoke-report.md  phase2-report.md  probe-metadata-load-report.md  reconvert-hwpx-249.md  reconvert-pdf-10.md  reconvert-report.md  rehearsal-report.md  t4-cloudflare-report.md
prompts/: bulk_ingest_phase1.md  bulk_ingest_phase1_m3.md  bulk_ingest_phase1_m4.md
pytest/: __init__.py  __main__.py
scripts/: README-hwp-to-hwpx.md  bulk_hwp_to_hwpx.py  prepublish_check.sh  run_bulk_ingest.sh  run_daily_increment.sh
tests/: test_build_backfill_manifest.py  test_derive_hot.py  test_entity_classify.py  test_frontmatter.py  test_hwp_queue.py  test_idempotency.py  test_load_probe_metadata.py  test_mcp_tools.py  test_pdf_queue.py  test_probe_backfill.py  test_reconvert.py  test_run_backfill_manifest.py  test_usage.py
(+36 files in other folders)
