[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "govpress-mcp"
version = "0.1.0"
description = "Govpress MCP server for Korean policy briefing search and analysis"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "mcp",
]

[project.scripts]
govpress-mcp = "govpress_mcp.server:main_stdio"
govpress-mcp-sse = "govpress_mcp.server:main_sse"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
